--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,13 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/telescope": "^4.16",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.0@beta"
+        "livewire/livewire": "^3.0beta"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/breeze": "^1.23",
-        "laravel/pint": "^1.0",
+        "laravel/breeze": "^1.21",
+        "laravel/pint": "^1.11",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
