--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "alpinejs": "^3.12.3",
         "autoprefixer": "^10.4.15",
         "axios": "^1.4.0",
+        "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.28",
-        "tailwindcss": "^3.3.3"
+        "tailwindcss": "^3.3.3",
+        "vite": "^4.4.9"
     }
 }
