fix: General view fix

--- a/.env
+++ b/.env
@@ -15,6 +15,12 @@ DB_DATABASE=throat
 DB_USERNAME=throat
 DB_PASSWORD=acronym
 
+HASH_METHOD=bcrypt
+BCRYPT_ROUNDS=12
+ARGON_MEMORY=65536
+ARGON_THREADS=1
+ARGON_TIME=4
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
