feat(templates): Add detail to templates
- Application Template
- Navigation Template
- Welcome Template
- Dashboard Template

Author: AG

--- a/.env.localhost
+++ b/.env.localhost
@@ -15,7 +15,13 @@ DB_DATABASE=throat
 DB_USERNAME=throat
 DB_PASSWORD=password
 
-BROADCAST_DRIVER=log
+HASH_METHOD=bcrypt
+BCRYPT_ROUNDS=12
+ARGON_MEMORY=65536
+ARGON_THREADS=1
+ARGON_TIME=4
+
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
@@ -57,3 +63,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=
+MEILISEARCH_HOST=
