--- a/.env
+++ b/.env
@@ -22,6 +22,14 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
+HASH_METHOD=bcrypt
+BCRYPT_ROUNDS=12
+ARGON_MEMORY=65536
+ARGON_THREADS=1
+ARGON_TIME=4
+
+
+
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
@@ -43,12 +51,12 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
+PUSHER_APP_ID=app-id
+PUSHER_APP_KEY=app-key
+PUSHER_APP_SECRET=app-secret
+PUSHER_HOST=soketi
+PUSHER_PORT=6001
+PUSHER_SCHEME=http
 PUSHER_APP_CLUSTER=mt1
 
 VITE_APP_NAME="${APP_NAME}"
@@ -57,3 +65,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
